force-app/main/default/objects/Template_Text__c/Template_Text__c.object-meta.xml
<CustomObject>
    <label>Template Text</label>
    <nameField>
        <label>Prompt Template Text Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Texts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>