force-app/main/default/objects/Template_Text__c/fields/Action_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Action_Instruction__c</fullName>
    <label>Action Instruction</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>