force-app/main/default/objects/Template_Text__c/fields/ActionInput1__c.field-meta.xml
<CustomField>
    <fullName>ActionInput1__c</fullName>
    <label>Action Input 1 instruction</label>
    <length>40000</length>
    <type>Html</type>
</CustomField>