force-app/main/default/objects/Template_Text__c/fields/ActionInput2__c.field-meta.xml
<CustomField>
    <fullName>ActionInput2__c</fullName>
    <label>Action Input 2 instruction</label>
    <length>40000</length>
    <type>Html</type>
</CustomField>