force-app/main/default/objects/Template_Text__c/fields/ActionOutput1__c.field-meta.xml
<CustomField>
    <fullName>ActionOutput1__c</fullName>
    <label>Action Output 1 instruction</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>