force-app/main/default/objects/Template_Text__c/fields/ActionOutput2__c.field-meta.xml
<CustomField>
    <fullName>ActionOutput2__c</fullName>
    <label>Action Output 2 instruction</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>