force-app/main/default/objects/Template_Text__c/fields/Prompt_Text__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Text__c</fullName>
    <label>Prompt Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>