force-app/main/default/objects/Template_Text__c/listViews/Copilot.listView-meta.xml
<ListView>
    <fullName>Copilot</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Module__c</columns>
    <columns>Action_Instruction__c</columns>
    <columns>Prompt_Text__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Template_Type__c</field>
        <operation>equals</operation>
        <value>Copilot Action</value>
    </filters>
    <label>Copilot</label>
</ListView>